@@ -1,6 +1,8 @@
 2017.06.XX ver2.9.4 - Fixed a bug in unchunk() [Win32].
 	            - Chnaged vizier server to strasbourg (nao.ac.jp mirror
 	              could be troubled in the summit LAN).
+	            - Removed main_iteration(FALSE) in draw_fc_cairo
+	              to fix the FC resize problem in Win64.
 
 2017.06.01 ver2.9.3 - Added "Add Object" menu in main menu.
 	            - Added GAIA DR1/2MASS for database query in FC.
